cuisines working with geolocation

--- a/index.html
+++ b/index.html
@@ -32,14 +32,11 @@
         <div class="row">
             <div class="col-md-6 text-center">
                 <div class="btn-group">
-                    <button type="button" class="btn-lg btn-info dropdown-toggle" data-toggle="dropdown"
+                    <button type="button" id="cuisine-button1" class="btn-lg btn-info dropdown-toggle" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Selection #1
                     </button>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item">Pizza</a>
-                        <a class="dropdown-item"></a>
-                        <a class="dropdown-item">Something else here</a>
+                    <div class="dropdown-menu" id="dropdown-menu1">
                     </div>
                 </div>
                 <!--Put image here of cuisine?-->
@@ -47,14 +44,11 @@
             </div>
             <div class="col-md-6 text-center">
                 <div class="btn-group">
-                    <button type="button" class="btn-lg btn-info dropdown-toggle" data-toggle="dropdown"
+                    <button type="button" id="cuisine-button2" class="btn-lg btn-info dropdown-toggle" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Selection #2
                     </button>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item">Pizza</a>
-                        <a class="dropdown-item"></a>
-                        <a class="dropdown-item">Something else here</a>
+                    <div class="dropdown-menu" id="dropdown-menu2">
                     </div>
                 </div>
                 <!--Put image here of cuisine?-->
@@ -84,38 +78,14 @@
             </tbody>
         </table>
     </div>
-  
-   <div class="container">
-        <h2>Basic Table</h2>
-        <table class="table">
-          <thead>
-            <tr>
-              <!-- The scope attribute specifies that this is a header for a column -->
-              <th scope="col">Restaurant Name</th>
-              <th scope="col">Address</th>
-              <th scope="col">Cuisines</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td id=rName></td>
-              <td id=rAddress></td>
-              <td id=rCuisines></td>
-            </tr>
-            <!-- more table rows here -->
-          </tbody>
-        </table>
-      </div>
-
 
     <!--Rob's testing stuff-->
     
-    <div class="container">
+    <!-- <div class="container">
             <h2>Basic Table</h2>
             <table class="table">
               <thead>
                 <tr>
-                  <!-- The scope attribute specifies that this is a header for a column -->
                   <th scope="col">Restaurant Name</th>
                   <th scope="col">Address</th>
                   <th scope="col">Cuisines</th>
@@ -127,16 +97,13 @@
                   <td id=rAddress></td>
                   <td id=rCuisines></td>
                 </tr>
-                <!-- more table rows here -->
               </tbody>
             </table>
-          </div>
+          </div> -->
 
 
     <!-- jQuery and Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="  crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
