copied from previous work

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <th scope="col">Never Again?</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id = "winnersTableBody">
             </tbody>
         </table>
     </div>
