--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <!--Rob's testing stuff-->
     
-    <!-- <div class="container">
+    <div class="container">
             <h2>Basic Table</h2>
             <table class="table">
               <thead>
@@ -164,7 +164,7 @@
                 </tr>
               </tbody>
             </table>
-          </div> -->
+          </div>
 
 
     <!-- jQuery and Bootstrap -->
