--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <!--Rob's testing stuff-->
     
-    <div class="container">
+    <div class="container" id="debugRestaurantTable">
             <h2>Basic Table</h2>
             <table class="table">
               <thead>
@@ -156,7 +156,7 @@
                   <th scope="col">Cuisines</th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody id="debugTableBody">
                 <tr>
                   <td id=rName></td>
                   <td id=rAddress></td>
